--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">Aplikasi_Silastik</string>
     <string name="Name">Name</string>
+    <string name="Nama">Name</string>
     <string name="Email">Email</string>
     <string name="Password">Password</string>
     <string name="Login">Login</string>
     <string name="Register">Register</string>
+    <string name="Submit">Submit</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
